# ChurchAudioStream

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/briefs/: listener-i18n-en-lv-ru.md
.planning/debug/: admin-gui-not-connecting-v2.md  audio-subsystem-not-initializing.md  device-list-regression.md  external-kill-no-audio.md  graceful-shutdown.md  hosts-entry-not-added.md  (+10 more)
listener/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: configure-host.ps1  generate-update-manifest.mjs  generate-update-manifest.test.mjs  install-prerequisites.ps1  installer-hooks.nsi  setup-signing-key.md  triage.ps1  uninstall-cleanup.ps1
sidecar/: build.ts  package-lock.json  package.json  test-find-arctis.cjs  test-fix-and-play.cjs  test-latency.cjs  test-list-mics.cjs  test-play-mp3.cjs  test-setup-vac.cjs  test-switch-source.cjs  test-use-default.cjs  test-ws.cjs  tsconfig.build.json  tsconfig.json  vitest.config.ts
src/: App.css  App.tsx  index.css  test-setup.ts
src-tauri/: .taurignore  Cargo.toml  config.example.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  log_file.rs  main.rs
src-tauri/src/update/: checker.rs  commands.rs  dispatcher.rs  errors.rs  lifecycle.rs  manifest.rs  mod.rs  state_guard.rs  storage.rs  tests_integration.rs  version.rs
(+388 files in other folders)
