[package]
name = "churchaudiostream"
version = "0.1.2"
description = "Cross-platform church audio restreaming application"
authors = ["ChurchAudioStream"]
edition = "2021"

[lib]
name = "churchaudiostream_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
semver = "1"
