[package]
name = "churchaudiostream"
version = "0.1.3"
description = "Cross-platform church audio restreaming application"
authors = ["ChurchAudioStream"]
edition = "2021"

[lib]
name = "churchaudiostream_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
integration = []

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
semver = "1"
log = "0.4"

[dev-dependencies]
tempfile = "3"
